--- a/index.html
+++ b/index.html
@@ -23,13 +23,31 @@
     <script src="js/nhlInspector.js"></script>
 
     <div class="container-fluid">
-        <div class="popup">
 
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#teamSelection">Select Team</button>
+
+        <!-- Modal Popup for favorite team selection-->
+        <div class="modal fade" id="teamSelection" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Select your favorite team</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Here some team to select</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Validate</button>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!----------------------------------------------->
 
-        
+
+
+
     </div>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
