--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script src="js/nhlInspector.js"></script>
 
+
+
+
+
+
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="js/stats.js"></script>
+
+
+
 </body>
 
 </html>
