--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 <body>
     <div class="container-fluid">
 
-        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#teamSelection">Select Team</button>
-
         <!-- Modal Popup for favorite team selection-->
         <div class="modal fade" id="teamSelection" role="dialog">
             <div class="modal-dialog">
@@ -42,6 +40,15 @@
         </div>
         <!----------------------------------------------->
 
+        <div id="mainRow" class="row">
+            <div id="leftPanel" class="col-lg-8 no-float">
+                <!--<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#teamSelection">Select Team</button>-->
+            </div>
+            <div id="rightPanel" class="col-lg-4 no-float">
+                <div id="myTeam" class="row"></div>
+                <div id="otherTeam" class="row"></div>
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -49,16 +56,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <script src="js/nhlInspector.js"></script>
 
-
-
-
-
-
+    <!-- Import D3-->
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="js/stats.js"></script>
 
+    <!-- Import our js files-->
+    <script src="js/nhlInspector.js"></script>
 
 
 </body>
