--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 <body>
     <div class="container-fluid">
 
+        <!-- Navigation Bar-->
         <nav class="navbar navbar-light bg-faded ">
             <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#teamSelection">Select Your Team</button>
         </nav>
-
+        <!----------------------------------------------->
 
         <!-- Modal Popup for favorite team selection-->
         <div class="modal fade" id="teamSelection" role="dialog">
@@ -35,16 +36,29 @@
                         <h4 class="modal-title">Select your favorite team</h4>
                     </div>
                     <div class="modal-body">
-                        <p id="team">Here some team to select</p>
+                        <!-- The team Carousel-->
+                        <div id="teamSelectorCarousel" class="carousel slide" data-ride="carousel" data-interval="200000">
+                            <ol id="teamSelectorCarouselIndicators" class="carousel-indicators"></ol>
+                            <div id="teamSelectorCarouselInner" class="carousel-inner" role="listbox"></div>
+                            <a class="carousel-control-prev" href="#teamSelectorCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#teamSelectorCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Validate</button>
+                        <button type="button" class="btn btn-outline-success" data-dismiss="modal">Validate</button>
                     </div>
                 </div>
             </div>
         </div>
         <!----------------------------------------------->
 
+        <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
             <div id="leftPanel" class="col-lg-8 no-float"></div>
             <div id="rightPanel" class="col-lg-4 no-float">
@@ -52,6 +66,8 @@
                 <div id="otherTeam" class="row"></div>
             </div>
         </div>
+        <!----------------------------------------------->
+
     </div>
 
     <!-- Optional JavaScript -->
