clean and add link between carousel and myteam, add local storage

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-success" data-dismiss="modal">Validate</button>
+                        <button type="button" class="btn btn-outline-success" data-dismiss="modal">Select</button>
                     </div>
                 </div>
             </div>
