Resize team logos on mouse hover

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
+            <div id="teamName" class="row"></div>
             <div id="leftPanel" class="col-lg-8 no-float"></div>
             <div id="rightPanel" class="col-lg-4 no-float">
                 <div id="myTeam" class="row"></div>
