Get wanted DATA from JSON and fix asynchronous retrieval

--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
     <!-- Import D3-->
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
+    <!-- Import lodash-->
+    <script src='https://cdn.jsdelivr.net/g/lodash@4(lodash.min.js+lodash.fp.min.js)'></script>
+
     <!-- Import our js files-->
     <script src="js/nhlInspector.js"></script>
+
+    <script> init(); </script>
 
 
 </body>
