--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
             <div id="leftPanel" class="col-lg-8 no-float">
+                <div id="teamName"></div>
                 <input id="timeSliderInput" data-container="body"/>
                 <input id="teamSliderInput" data-container="body"/>
             </div>
