--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
             <div id="teamName" class="row"></div>
-            <div id="leftPanel" class="col-lg-8 no-float"></div>
-            <div id="rightPanel" class="col-lg-4 no-float">
-                <div id="myTeam" class="row"></div>
-                <div id="otherTeam" class="row"></div>
-            </div>
+            <div id="leftPanel" class="left"></div>
+            <div id="rightPanel" class="right"></div>
         </div>
         <!----------------------------------------------->
 
