--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="modal-body">
                         <!-- The team Carousel-->
-                        <div id="teamSelectorCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+                        <div id="teamSelectorCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol id="teamSelectorCarouselIndicators" class="carousel-indicators"></ol>
                             <div id="teamSelectorCarouselInner" class="carousel-inner" role="listbox"></div>
                             <a class="carousel-control-prev" href="#teamSelectorCarousel" role="button" data-slide="prev">
@@ -51,6 +51,9 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
+                        <div id="teamSelectorGrid">
+                        </div>
+
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-outline-success" data-dismiss="modal">Select</button>
