Improve dynamic panels
3 cases :  70/30 -- 30/70 -- 50/50
Redraw spiral and team still buggy

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
+          <div class="panels">
             <div id="leftPanel" class="left">
                 <div id="teamName"></div>
                 <input id="timeSliderInput" data-container="body"/>
@@ -74,6 +75,7 @@
                 <div id="myTeam" class="row"></div>
                 <div id="otherTeam" class="row"></div>
             </div>
+          </div>
         </div>
         <!----------------------------------------------->
 
