change main transition

--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
           <div class="panels">
-            <div id="leftPanel" class="left">
-                <div id="teamName"></div>
-                <input id="timeSliderInput" data-container="body"/>
-                <input id="teamSliderInput" data-container="body"/>
-            </div>
-            <div id="rightPanel" class="right">
-                <div id="myTeam" class="row"></div>
-                <div id="otherTeam" class="row"></div>
-            </div>
+              <input id="timeSliderInput" class="tooltip" data-container="body"/>
+              <div id="teamName" class="tooltip" ></div>
+
+              <div id="leftPanel" class="left active">
+              </div>
+              <div id="rightPanel" class="right">
+                  <div id="myTeam" class=""></div>
+              </div>
           </div>
         </div>
         <!----------------------------------------------->
