beautify and add the global draw method to solve a fail

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div id="mainRow" class="row">
           <div class="panels">
               <input id="timeSliderInput" class="tooltip" data-container="body"/>
-              <div id="teamName" class="tooltip" ></div>
+              <div><h3 id="teamName" class="tooltip"></h3></div>
 
               <div id="leftPanel" class="left active">
               </div>
