correct carrousel active bug

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <input id="timeSliderInput" class="tooltip" data-container="body"/>
               <div><h3 id="teamName" class="tooltip"></h3></div>
 
-              <div id="leftPanel" class="left active">
+              <div id="leftPanel" class="left activePanel">
               </div>
               <div id="rightPanel" class="right">
                   <div id="myTeam" class=""></div>
