--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
           <div class="panels">
-              <input id="timeSliderInput" class="tooltip" data-container="body"/>
-              <div><h3 id="teamName" class="tooltip"></h3></div>
+              <input id="timeSliderInput" class="tool" data-container="body"/>
+              <div><h3 id="teamName" class="tool"></h3></div>
 
               <div id="leftPanel" class="left activePanel">
               </div>
