--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
 <body>
 
     <!-- Navigation Bar-->
-    <nav class="navbar navbar-light navbar-fixed-top bg-faded">
-        <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#teamSelection">Select Your Team</button>
+    <nav class="navbar navbar-light navbar-fixed-top bg-faded ">
+        <div>
+            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#teamSelection">Select Your Team</button>
+            <select class="selectpicker btn btn-outline-success">
+                <option>NHL</option>
+                <option>Conference</option>
+                <option>Division</option>
+            </select>
+        </div>
     </nav>
+
     <!----------------------------------------------->
 
     <div class="container-fluid">
