--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div>
             <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#teamSelection">Select Your Team</button>
             <select class="selectpicker btn btn-outline-success">
-                <option>NHL</option>
-                <option>Conference</option>
-                <option>Division</option>
+                <option value=0>NHL</option>
+                <option value=1>Conference</option>
+                <option value=2>Division</option>
             </select>
         </div>
     </nav>
