--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>NHL Inspector</title>
-    <meta name="description" content="TODO">
-    <meta name="author" content="TODO">
+    <meta name="description" content="Visualization of the current NHL championship">
+    <meta name="author" content="Häfliger, Chatelain, Imani">
     <!--For smartphones-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
