add button play animation

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <!-- Main D3 Panels-->
         <div id="mainRow" class="row">
           <div class="panels">
-              <input id="timeSliderInput" class="tool" data-container="body"/>
+              <input id="timeSliderInput" class="tool slide" data-container="body"/>
+              <button id="playResume" type="button" class="btn btn-outline-success playButton"></button>
               <div><h3 id="teamName" class="tool"></h3></div>
 
               <div id="leftPanel" class="left activePanel">
