--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
           <div class="panels">
               <input id="timeSliderInput" class="tool slide" data-container="body"/>
               <button id="playResume" type="button" class="btn btn-outline-success playButton"></button>
-              <div><h3 id="teamName" class="tool"></h3></div>
+              <div><h3 id="teamName" class="tool activeTool"></h3></div>
+              <div><h3 id="teamVersus" class="tool"></h3></div>
 
               <div id="leftPanel" class="left activePanel">
               </div>
