add favicon and title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Häfliger, Chatelain, Imani">
     <!--For smartphones-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="images/png" href="css/images/i.png" />
     <!-- Import bootstrap default style and our style override, in that order -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css">
@@ -25,12 +25,17 @@
     <!-- Navigation Bar-->
     <nav class="navbar navbar-light navbar-fixed-top bg-faded ">
         <div>
-            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#teamSelection">Select Your Team</button>
-            <select class="selectpicker btn btn-outline-success">
-                <option value=0>NHL</option>
-                <option value=1>Conference</option>
-                <option value=2>Division</option>
-            </select>
+          <h2 class="white">
+              NHL Inspector
+          </h2>
+      </div>
+    <div>
+          <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#teamSelection">Select Your Team</button>
+          <select class="selectpicker btn btn-outline-success">
+              <option value=0>NHL</option>
+              <option value=1>Conference</option>
+              <option value=2>Division</option>
+          </select>
         </div>
     </nav>
 
