Add a todo in title and change it

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>NHL Inspector</title>
+    <title>NHL Standings</title>
     <meta name="description" content="Visualization of the current NHL championship">
     <meta name="author" content="Häfliger, Chatelain, Imani">
     <!--For smartphones-->
@@ -26,7 +26,8 @@
     <nav class="navbar navbar-light navbar-fixed-top bg-faded ">
         <div>
           <h2 class="white">
-              NHL Inspector
+              Current NHL Standings
+              <!--TODO better title ? Ranking ?-->
           </h2>
       </div>
     <div>
