change the team text position and correct on resize transition bug

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div id="mainRow" class="row">
           <div class="panels">
               <input id="timeSliderInput" class="tool slide" data-container="body"/>
-              <button id="playResume" type="button" class="btn btn-outline-success playButton"></button>
+              <button id="playResume" type="button" class="btn btn-outline-success playButton" title="Run Championship"></button>
               <div><h3 id="teamName" class="tool activeTool"></h3></div>
               <div><h3 id="teamVersus" class="tool"></h3></div>
 
