--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
 
               <div id="leftPanel" class="left activePanel">
               </div>
-              <div id="rightPanel" class="right">
-                  <div id="myTeam" class=""></div>
+              <div id="rightPanel" class="right blinkborder">
+                  <div id="myTeam" class="">
+                      <div id="dd" class="">CLICK ME</div>
+                  </div>
               </div>
           </div>
         </div>
