add click me blinking

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </div>
               <div id="rightPanel" class="right blinkborder">
                   <div id="myTeam" class="">
-                      <div id="dd" class="">CLICK ME</div>
+                      <div id="clickme" class="">CLICK ON ME TO SWITCH</div>
                   </div>
               </div>
           </div>
