add information modal if otherteam is null

--- a/index.html
+++ b/index.html
@@ -75,6 +75,25 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="infoModal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Information</h4>
+                    </div>
+                    <div class="modal-body">
+                        <h5 style="color: white;">
+                            Click on another team in the spiral to compare with your favorite team !
+                        </h5>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-success" data-dismiss="modal">I understood</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!----------------------------------------------->
 
         <!-- Main D3 Panels-->
@@ -89,7 +108,7 @@
               </div>
               <div id="rightPanel" class="right blinkborder">
                   <div id="myTeam" class="">
-                      <div id="clickme" class="">CLICK ON ME TO SWITCH</div>
+                      <div id="clickme" class="">CLICK ON ME TO SWITCH MODE</div>
                   </div>
               </div>
           </div>
