Add caption for colors

--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
               <button id="playResume" type="button" class="btn btn-outline-success playButton" title="Run Championship"></button>
               <div><h3 id="teamName" class="tool activeTool"></h3></div>
               <div><h3 id="teamVersus" class="tool"></h3></div>
-
+              <div id="colorLabels" class="tool activeTool">
+                <h3>
+                  <font color = "#fff">Qualified for Playoffs</font><br>
+                  <font color = "#C4CACE" size="5">&#9679;</font><font size="3"> By Division ranking</font><br>
+                  <font color = "green" size="5">&#9679;</font><font size="3"> By WildCard ranking</font>
+                </h3>
+              </div>
               <div id="leftPanel" class="left activePanel">
               </div>
               <div id="rightPanel" class="right blinkborder">
