--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
               <div><h3 id="teamVersus" class="tool"></h3></div>
               <div id="colorLabels" class="tool activeTool">
                 <h3>
-                  <font color = "#fff">Qualified for Playoffs</font><br>
-                  <font color = "#C4CACE" size="5">&#9679;</font><font size="3"> By Division ranking</font><br>
-                  <font color = "green" size="5">&#9679;</font><font size="3"> By WildCard ranking</font>
+                  <font color = "#fff">Playoffs projections</font><br>
+                  <font color = "#C4CACE" size="6">&#9679;</font><font size="3"> By Division ranking</font><br>
+                  <font color = "green" size="6">&#9679;</font><font size="3"> By WildCard ranking</font>
                 </h3>
               </div>
               <div id="leftPanel" class="left activePanel">
