--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-light navbar-fixed-top bg-faded ">
         <div>
           <h2 class="white">
-              Current NHL Standings
+              NHL Standings
               <!--TODO better title ? Ranking ?-->
           </h2>
       </div>
